<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremy.bandaide.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_song_activity"
        android:id="@+id/btn_song"
        android:onClick="onClick_btn_song"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_people"
        android:onClick="onClick_btn_people"
        android:text="@string/btn_people"
        android:layout_below="@+id/btn_song"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_venue"
        android:id="@+id/btn_venues"
        android:onClick="onClick_btn_venue"
        android:layout_below="@+id/btn_people"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_setlists"
        android:id="@+id/btn_setlists"
        android:onClick="onClick_btn_setlists"
        android:layout_below="@+id/btn_venues"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_gigs"
        android:id="@+id/btn_gigs"
        android:onClick="onClick_btn_gigs"
        android:layout_below="@+id/btn_setlists"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
</RelativeLayout>
