<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".song_add">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_songname"
        android:id="@+id/tv_songname"
        android:layout_above="@+id/et_song_edit_artist"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/et_song_edit_name"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:width="230dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_artist"
        android:id="@+id/tv_artist"
        android:layout_alignBottom="@+id/et_song_edit_artist"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_artist"
        android:layout_below="@+id/et_song_edit_name"
        android:layout_alignLeft="@+id/et_song_edit_name"
        android:layout_alignStart="@+id/et_song_edit_name"
        android:width="230dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_tempo"
        android:layout_below="@+id/et_song_edit_artist"
        android:layout_alignLeft="@+id/et_song_edit_artist"
        android:layout_alignStart="@+id/et_song_edit_artist"
        android:inputType="number"
        android:width="230dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_tempo"
        android:id="@+id/tv_tempo"
        android:layout_alignBottom="@+id/et_song_edit_tempo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_menu"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick_mainMenu_songEdit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick_button_submit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_genre"
        android:id="@+id/tv_genre"
        android:layout_above="@+id/et_song_edit_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_year"
        android:id="@+id/tv_year"
        android:layout_alignBottom="@+id/et_song_edit_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_notes"
        android:id="@+id/tv_notes"
        android:layout_below="@+id/tv_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_length"
        android:id="@+id/tv_length"
        android:layout_above="@+id/et_song_edit_timeSig"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_timeSignature"
        android:id="@+id/tv_timeSig"
        android:layout_above="@+id/et_song_edit_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_key"
        android:id="@+id/tv_key"
        android:layout_alignBottom="@+id/et_song_edit_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_genre"
        android:layout_below="@+id/et_song_edit_tempo"
        android:layout_alignLeft="@+id/et_song_edit_tempo"
        android:layout_alignStart="@+id/et_song_edit_tempo"
        android:width="230dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_year"
        android:layout_below="@+id/et_song_edit_genre"
        android:layout_alignLeft="@+id/et_song_edit_genre"
        android:layout_alignStart="@+id/et_song_edit_genre"
        android:inputType="number"
        android:width="230dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_notes"
        android:width="230dp"
        android:layout_below="@+id/tv_notes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_length"
        android:width="230dp"
        android:layout_below="@+id/et_song_edit_year"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_timeSig"
        android:width="230dp"
        android:layout_below="@+id/et_song_edit_length"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_song_edit_key"
        android:layout_below="@+id/et_song_edit_timeSig"
        android:layout_alignLeft="@+id/et_song_edit_timeSig"
        android:layout_alignStart="@+id/et_song_edit_timeSig"
        android:width="230dp"/>
</RelativeLayout>
