<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".song_add">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_menu"
        android:id="@+id/btn_gigs_view_main_menu"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick_mainMenu"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_venue"
        android:id="@+id/tv_gigs_view_venue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_date"
        android:id="@+id/tv_gigs_view_date"
        android:layout_below="@+id/tv_gigs_view_venue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_time"
        android:id="@+id/tv_gigs_view_time"
        android:layout_below="@+id/tv_gigs_view_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_pay"
        android:id="@+id/tv_gigs_view_pay"
        android:layout_below="@+id/tv_gigs_view_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>







    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Venue"
        android:id="@+id/tv_gigs_view_venue_view"
        android:layout_alignTop="@+id/tv_gigs_view_venue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Date"
        android:id="@+id/tv_gigs_view_date_view"
        android:layout_below="@+id/tv_gigs_view_venue_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Time"
        android:id="@+id/tv_gigs_view_time_view"
        android:layout_below="@+id/tv_gigs_view_date_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Pay"
        android:id="@+id/tv_gigs_view_pay_view"
        android:layout_below="@+id/tv_gigs_view_time_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>






    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:id="@+id/btn_gigs_view_delete"
        android:layout_alignParentBottom="true"

        android:layout_alignParentRight="true"
        android:onClick="onClick_delete"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:id="@+id/btn_gigs_view_edit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick_edit"/>

</RelativeLayout>