<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".song_add">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_venue"
        android:id="@+id/tv_gigs_add_venue"
        android:layout_alignTop="@+id/sp_gigs_add_venue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/sp_gigs_add_venue"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"

        android:width="230dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_date"
        android:id="@+id/tv_gigs_add_date"
        android:layout_alignBottom="@+id/et_gigs_add_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_gigs_add_date"
        android:layout_below="@+id/sp_gigs_add_venue"
        android:layout_alignLeft="@+id/sp_gigs_add_venue"
        android:layout_alignStart="@+id/sp_gigs_add_venue"
        android:width="230dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_gigs_add_time"
        android:layout_below="@+id/et_gigs_add_date"
        android:layout_alignLeft="@+id/et_gigs_add_date"
        android:layout_alignStart="@+id/et_gigs_add_date"
        android:width="230dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_time"
        android:id="@+id/tv_gigs_add_time"
        android:layout_alignBottom="@+id/et_gigs_add_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_menu"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick_button_main_menu"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick_button_submit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_gigs_pay"
        android:id="@+id/tv_gigs_add_pay"
        android:layout_alignBottom="@+id/et_gigs_add_pay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_gigs_add_pay"
        android:width="230dp"
        android:layout_below="@+id/et_gigs_add_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
